# CppSimpleHttpServer

./: CMakeLists.txt  handler.h  http_server.h  main.cpp  server_base.h
web/: index.html
